<resources>
    <string name="app_name">winest_aplication</string>
    <string name="welcome_to">Welcome to</string>
    <string name="winest">Winest</string>
    <string name="email">Email</string>
    <string name="email_hint">vanilson@gmail.com</string>
    <string name="password">Password</string>
    <string name="password_hint">*********</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="personal_information">Personal information</string>
    <string name="full_name">Full name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="enter_date_of_birth">Enter Date of birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number_hint">Enter Phone number</string>
    <string name="account_information">Account information</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_of_use_and_privacy_policy">By registering, you are agreeing with our Terms of Use and Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
</resources>