<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/iv_circle_weak"
        android:layout_width="324sp"
        android:layout_height="166sp"
        android:src="@drawable/shape_circle_weak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="faded_red_circle" />

    <ImageView
        android:id="@+id/iv_circle_strong"
        android:layout_width="229sp"
        android:layout_height="195sp"
        android:src="@drawable/shape_circle_strong"
        app:layout_constraintBottom_toBottomOf="@id/iv_circle_weak"
        app:layout_constraintStart_toStartOf="@id/iv_circle_weak"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521"
        android:contentDescription="red_circle" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text="@string/welcome_to"
        android:textAppearance="@style/CustomFontMedium"
        android:textColor="@color/default_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_circle_weak" />

    <TextView
        android:id="@+id/tv_winest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winest"
        android:textAppearance="@style/CustomFontBold"
        android:textColor="@color/default_wine"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <LinearLayout
        android:id="@+id/ll_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32sp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_winest">

        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="@style/CustomFontRegular"
            android:textColor="@color/default_wine"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_field_credentials"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_email_label" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32sp"
        android:layout_marginTop="24sp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_email_field">

        <TextView
            android:id="@+id/tv_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="@style/CustomFontRegular"
            android:textColor="@color/default_wine"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_field_credentials"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_email_label" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_remember_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36sp"
        android:layout_marginTop="16sp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_password_field">

        <CheckBox
            android:id="@+id/cb_remember_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/shape_checkbox_unselected"
            android:padding="12sp" />

        <TextView
            android:id="@+id/tv_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remember_me"
            android:textAppearance="@style/CustomFontMedium"
            android:textSize="16sp"
            android:textColor="@color/default_gray" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50sp"
            android:text="@string/forgot_password"
            android:textAppearance="@style/CustomFontSemiBold"
            android:textSize="16sp"
            android:textColor="@color/default_wine" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_remember_forgot">

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account" />

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/default_wine" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="36sp"
        android:background="@drawable/shape_default_button"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAppearance="@style/CustomFontSemiBold"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_create_account" />


</androidx.constraintlayout.widget.ConstraintLayout>
